MYFACES-1976 Enhance build process, unpacking shared only when a release occur and use a dependency to shared instead
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk@701276 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -142,81 +142,110 @@
         </configuration>
       </plugin>
        -->
-      <plugin>
-        <!--
-          - The shared-impl project generates a modified version of the "shared" module
-          - source and classes. The result is a jar full of files in the "shared_impl"
-          - package that we can merge into the jar for this project.
-          -->
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>dependency-maven-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <id>unpack-shared-impl</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>unpack</goal>
-            </goals>
-            <configuration>
-              <artifactItems>
-                <artifactItem>
-                  <groupId>org.apache.myfaces.shared</groupId>
-                  <artifactId>myfaces-shared-impl</artifactId>
-                  <version>${myfaces-shared.version}</version>
-                </artifactItem>
-              </artifactItems>
-              <outputDirectory>${project.build.directory}/classes</outputDirectory>
-            </configuration>
-          </execution>
-          <!-- unpack the shared sources into target/shared_sources-->
-          <execution>
-            <id>unpack-shared-impl-sources</id>
-            <phase>process-sources</phase>
-            <goals>
-                <goal>unpack</goal>
-            </goals>
-            <configuration>
-                <artifactItems>
-                    <artifactItem>
-                        <groupId>org.apache.myfaces.shared</groupId>
-                        <artifactId>myfaces-shared-impl</artifactId>
-                        <version>${myfaces-shared.version}</version>
-                        <classifier>sources</classifier>
-                    </artifactItem>
-                </artifactItems>
-                <outputDirectory>${project.build.directory}/shared_sources</outputDirectory>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
-      <plugin>
-        <!-- 
-          - Add the unpacked shared sources directory as source directory into the pom datastructure,
-          - so that the -source jar includes them too; every .class file in the jar should have its
-          - source in the -source jar.
-          -->  
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>build-helper-maven-plugin</artifactId>
-        <version>1.0</version>
-        <executions>
-          <execution>
-            <id>add-source</id>
-            <phase>process-sources</phase>
-            <goals>
-              <goal>add-source</goal>
-            </goals>
-            <configuration>
-              <sources>
-                <source>${project.build.directory}/shared_sources</source>
-              </sources>
-            </configuration>
-          </execution>
-        </executions>
-      </plugin>
     </plugins>
   </build>
   <profiles>
+    <profile>
+        <id>add-shared-dependency</id>
+        <activation>
+            <property>
+                <name>!performRelease</name>
+            </property>
+        </activation>
+        <dependencies>
+            <dependency>
+                <groupId>org.apache.myfaces.shared</groupId>
+                <artifactId>myfaces-shared-impl</artifactId>
+                <version>${myfaces-shared.version}</version>
+                <scope>compile</scope>
+            </dependency>
+        </dependencies>
+    </profile>
+    <profile>
+        <id>unpack-shared</id>
+        <activation>
+            <property>
+                <name>performRelease</name>
+                <value>true</value>
+            </property>
+        </activation>
+        <build>
+            <plugins>
+              <plugin>
+                <!--
+                  - The shared-impl project generates a modified version of the "shared" module
+                  - source and classes. The result is a jar full of files in the "shared_impl"
+                  - package that we can merge into the jar for this project.
+                  -->
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>dependency-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                  <execution>
+                    <id>unpack-shared-impl</id>
+                    <phase>process-classes</phase>
+                    <goals>
+                      <goal>unpack</goal>
+                    </goals>
+                    <configuration>
+                      <artifactItems>
+                        <artifactItem>
+                          <groupId>org.apache.myfaces.shared</groupId>
+                          <artifactId>myfaces-shared-impl</artifactId>
+                          <version>${myfaces-shared.version}</version>
+                        </artifactItem>
+                      </artifactItems>
+                      <outputDirectory>${project.build.directory}/classes</outputDirectory>
+                    </configuration>
+                  </execution>
+                  <!-- unpack the shared sources into target/shared_sources-->
+                  <execution>
+                    <id>unpack-shared-impl-sources</id>
+                    <phase>process-sources</phase>
+                    <goals>
+                        <goal>unpack</goal>
+                    </goals>
+                    <configuration>
+                        <artifactItems>
+                            <artifactItem>
+                                <groupId>org.apache.myfaces.shared</groupId>
+                                <artifactId>myfaces-shared-impl</artifactId>
+                                <version>${myfaces-shared.version}</version>
+                                <classifier>sources</classifier>
+                            </artifactItem>
+                        </artifactItems>
+                        <outputDirectory>${project.build.directory}/shared_sources</outputDirectory>
+                    </configuration>
+                  </execution>
+                </executions>
+              </plugin>
+              <plugin>
+                <!-- 
+                  - Add the unpacked shared sources directory as source directory into the pom datastructure,
+                  - so that the -source jar includes them too; every .class file in the jar should have its
+                  - source in the -source jar.
+                  -->  
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>build-helper-maven-plugin</artifactId>
+                <version>1.0</version>
+                <executions>
+                  <execution>
+                    <id>add-source</id>
+                    <phase>process-sources</phase>
+                    <goals>
+                      <goal>add-source</goal>
+                    </goals>
+                    <configuration>
+                      <sources>
+                        <source>${project.build.directory}/shared_sources</source>
+                      </sources>
+                    </configuration>
+                  </execution>
+                </executions>
+              </plugin>
+            </plugins>
+        </build>
+    </profile>
     <profile>
       <!--
         - Whenever the full website is generated, the command
