--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -583,6 +583,6 @@
   </repositories>
 
   <properties>
-    <myfaces-shared.version>3.0.5-SNAPSHOT</myfaces-shared.version>
+    <myfaces-shared.version>3.0.5</myfaces-shared.version>
   </properties>
 </project>
