MYFACES-2025 generated myfaces-metadata.xml on myfaces-impl on linux does not have information annotated on impl
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@708998 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -40,9 +40,10 @@
             <id>makemyfacesmetadata</id>
             <configuration>
                 <!-- Qdox 1.6.3 does not parse inner enums on classes
-                so we have to exclude some files temporally. -->
-                <includes>**/*.java</includes>
-                <excludes>**/FacesCompositeELResolver.java</excludes>
+                so we have to exclude some files temporally. 
+                Added linux case (paths start with /) to filter temporally too-->
+                <includes>/**/*.java,**/*.java</includes>
+                <excludes>/**/FacesCompositeELResolver.java,**/FacesCompositeELResolver.java</excludes>
             </configuration>
             <goals>
               <goal>build-metadata</goal>
