update pom to use myfaces builder plugin 1.0.2
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0@709256 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -34,15 +34,15 @@
       <plugin>
         <groupId>org.apache.myfaces.buildtools</groupId>
         <artifactId>myfaces-builder-plugin</artifactId>
-        <version>1.0.2-SNAPSHOT</version>
+        <version>1.0.2</version>
         <executions>          
           <execution>
             <id>makemyfacesmetadata</id>
             <configuration>
                 <!-- Qdox 1.6.3 does not parse inner enums on classes
                 so we have to exclude some files temporally. -->
-                <includes>**/*.java</includes>
-                <excludes>**/FacesCompositeELResolver.java</excludes>
+                <includes>**/*.java,/**/*.java</includes>
+                <excludes>**/FacesCompositeELResolver.java,/**/FacesCompositeELResolver.java</excludes>
             </configuration>
             <goals>
               <goal>build-metadata</goal>
@@ -422,7 +422,7 @@
     <dependency>
       <groupId>org.apache.myfaces.buildtools</groupId>
       <artifactId>myfaces-builder-annotations</artifactId> 
-      <version>1.0.2-SNAPSHOT</version>
+      <version>1.0.2</version>
       <scope>provided</scope>
     </dependency>
     
