activate unpack shared profile when dev is not present
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@721581 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -212,8 +212,7 @@
         <id>unpack-shared</id>
         <activation>
             <property>
-                <name>performRelease</name>
-                <value>true</value>
+                <name>!dev</name>
             </property>
         </activation>
         <build>
