https://issues.apache.org/jira/browse/MYFACES-2122
ongoing works in the mockup area... basic dom manipulation now is in place


git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/branches/2_0_0@723702 13f79535-47bb-0310-9956-ffa450edef68

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -86,7 +86,7 @@
                             <name>javax.faces.Ajax</name>
                             <type>TESTSUITES</type>
                             <includes>
-                                <include>test/ScenarioTest.js</include>
+                                <include>test/MockupTest.js</include>
                                 <include>utils/_JSF2UtilsTests.js</include>
                                 
                                 <include>ajax/AjaxTests.js</include>
