--- a/pom.xml
+++ b/pom.xml
@@ -16,16 +16,16 @@
     This project is the home of the MyFaces implementation of the JavaServer Faces 1.2 specification, and
     consists of an API module (javax.faces.* classes) and an implementation module (org.apache.myfaces.* classes).
   </description>
-  <version>1.2.6</version>
+  <version>1.2.7-SNAPSHOT</version>
   <url>http://myfaces.apache.org/core12</url>
   <issueManagement>
     <system>jira</system>
     <url>http://issues.apache.org/jira/secure/BrowseProject.jspa?id=10600</url>
   </issueManagement>
   <scm>
-    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_6</connection>
-    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/branches/1_2_6</developerConnection>
-    <url>http://svn.apache.org/repos/asf/myfaces/core/branches/1_2_6</url>
+    <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</connection>
+    <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</developerConnection>
+    <url>http://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x</url>
   </scm>
   <modules>
     <!-- module>build</module -->
