--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,4 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project
-  xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
   <parent>
     <groupId>org.apache.myfaces</groupId>
@@ -125,7 +121,7 @@
         <artifactId>maven-pmd-plugin</artifactId>
         <version>2.2</version>
         <reportSets>
-          <reportSet/>
+          <reportSet />
         </reportSets>
       </plugin>
     </plugins>
