Change dependency from jstl:jstl to javax.servlet:jstl. The latter is the new name for this artifact; jstl:jstl 1.1.2 redirects to this new name.
git-svn-id: https://svn.apache.org/repos/asf/myfaces/core/trunk_1.2.x@754983 13f79535-47bb-0310-9956-ffa450edef68

--- a/impl/pom.xml
+++ b/impl/pom.xml
@@ -378,7 +378,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>jstl</groupId>
+      <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <!-- version defined in parent -->
       <scope>provided</scope>
