--- a/api/pom.xml
+++ b/api/pom.xml
@@ -179,7 +179,7 @@
       <scope>provided</scope>
     </dependency>
     <dependency>
-      <groupId>jstl</groupId>
+      <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <!-- version defined in parent -->
       <scope>provided</scope>
