--- a/pom.xml
+++ b/pom.xml
@@ -140,7 +140,7 @@
         <version>2.1</version>
       </dependency>
       <dependency>
-        <groupId>jstl</groupId>
+        <groupId>javax.servlet</groupId>
         <artifactId>jstl</artifactId>
         <version>1.2</version>
         <exclusions>
